Some more papers on the self avoid random walk

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 4ddeb49c0f5fd9c22bdbb8a0738cfe10fcc0e94a
+% Commit: b542496e7349f4c240391fe6cfe63eaf3894c041
 % Date: 2023-11-17
 % ---------------------------
 
@@ -11561,7 +11561,19 @@
   doi           = {10.1090/conm/307/05265},
   url           = {https://doi.org/10.1090/conm/307/05265}
 }
-@article{bourgain:02:on,
+@incollection{bourgain:02:on,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
+}
+@article{bourgain:02:on*1,
   author        = {Bourgain, J.},
   title         = {On the distributions of the {F}ourier spectrum of {B}oolean functions},
   journal       = {Israel J. Math.},
@@ -11575,18 +11587,6 @@
   mrreviewer    = {Colin\ C.\ Graham},
   doi           = {10.1007/BF02785861},
   url           = {https://doi.org/10.1007/BF02785861}
-}
-@incollection{bourgain:02:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
 }
 @incollection{bourgain:02:on*2,
   author        = {Bourgain, J.},
@@ -11668,23 +11668,7 @@
   doi           = {10.1007/978-3-540-36428-3\_8},
   url           = {https://doi.org/10.1007/978-3-540-36428-3_8}
 }
-@article{bourgain:03:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
-  journal       = {Geom. Funct. Anal.},
-  fjournal      = {Geometric and Functional Analysis},
-  volume        = {13},
-  year          = {2003},
-  number        = {2},
-  pages         = {334--365},
-  issn          = {1016-443X,1420-8970},
-  mrclass       = {11K55 (28A80)},
-  mrnumber      = {1982147},
-  mrreviewer    = {Ben\ Joseph\ Green},
-  doi           = {10.1007/s000390300008},
-  url           = {https://doi.org/10.1007/s000390300008}
-}
-@incollection{bourgain:03:on*2,
+@incollection{bourgain:03:on*1,
   author        = {Bourgain, J.},
   title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
   booktitle     = {Geometric aspects of functional analysis},
@@ -11699,6 +11683,22 @@
   mrreviewer    = {Apostolos\ A.\ Giannopoulos},
   doi           = {10.1007/978-3-540-36428-3\_9},
   url           = {https://doi.org/10.1007/978-3-540-36428-3_9}
+}
+@article{bourgain:03:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
+  journal       = {Geom. Funct. Anal.},
+  fjournal      = {Geometric and Functional Analysis},
+  volume        = {13},
+  year          = {2003},
+  number        = {2},
+  pages         = {334--365},
+  issn          = {1016-443X,1420-8970},
+  mrclass       = {11K55 (28A80)},
+  mrnumber      = {1982147},
+  mrreviewer    = {Ben\ Joseph\ Green},
+  doi           = {10.1007/s000390300008},
+  url           = {https://doi.org/10.1007/s000390300008}
 }
 @incollection{bourgain:03:random,
   author        = {Bourgain, J.},
@@ -12535,23 +12535,7 @@
   doi           = {10.1134/s0081543813010045},
   url           = {https://doi.org/10.1134/s0081543813010045}
 }
-@incollection{bourgain:13:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
-  booktitle     = {Asymptotic geometric analysis},
-  series        = {Fields Inst. Commun.},
-  volume        = {68},
-  pages         = {39--44},
-  publisher     = {Springer, New York},
-  year          = {2013},
-  isbn          = {978-1-4614-6405-1; 978-1-4614-6406-8},
-  mrclass       = {37D50 (37D25)},
-  mrnumber      = {3076146},
-  mrreviewer    = {Boris\ Hasselblatt},
-  doi           = {10.1007/978-1-4614-6406-8\_3},
-  url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
-}
-@article{bourgain:13:on*2,
+@article{bourgain:13:on*1,
   author        = {Bourgain, J.},
   title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
   journal       = {Israel J. Math.},
@@ -12566,6 +12550,22 @@
   mrreviewer    = {Gergely\ Harcos},
   doi           = {10.1007/s11856-013-0002-2},
   url           = {https://doi.org/10.1007/s11856-013-0002-2}
+}
+@incollection{bourgain:13:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
+  booktitle     = {Asymptotic geometric analysis},
+  series        = {Fields Inst. Commun.},
+  volume        = {68},
+  pages         = {39--44},
+  publisher     = {Springer, New York},
+  year          = {2013},
+  isbn          = {978-1-4614-6405-1; 978-1-4614-6406-8},
+  mrclass       = {37D50 (37D25)},
+  mrnumber      = {3076146},
+  mrreviewer    = {Boris\ Hasselblatt},
+  doi           = {10.1007/978-1-4614-6406-8\_3},
+  url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
 }
 @article{bourgain:13:on*3,
   author        = {Bourgain, J.},
@@ -12658,23 +12658,7 @@
   mrnumber      = {3329846},
   mrreviewer    = {Brett\ D.\ Wick}
 }
-@article{bourgain:14:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {203},
-  year          = {2014},
-  number        = {1},
-  pages         = {275--293},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {42B25},
-  mrnumber      = {3273441},
-  mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
-  doi           = {10.1007/s11856-014-1059-2},
-  url           = {https://doi.org/10.1007/s11856-014-1059-2}
-}
-@incollection{bourgain:14:on*2,
+@incollection{bourgain:14:on*1,
   author        = {Bourgain, Jean},
   title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
   booktitle     = {Geometric aspects of functional analysis},
@@ -12689,6 +12673,22 @@
   mrreviewer    = {Michael\ A.\ Perelmuter},
   doi           = {10.1007/978-3-319-09477-9\_6},
   url           = {https://doi.org/10.1007/978-3-319-09477-9_6}
+}
+@article{bourgain:14:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {203},
+  year          = {2014},
+  number        = {1},
+  pages         = {275--293},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {42B25},
+  mrnumber      = {3273441},
+  mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
+  doi           = {10.1007/s11856-014-1059-2},
+  url           = {https://doi.org/10.1007/s11856-014-1059-2}
 }
 @incollection{bourgain:14:on*3,
   author        = {Bourgain, Jean},
@@ -14058,33 +14058,6 @@
 }
 @article{bourgain:84:on,
   author        = {Bourgain, J.},
-  title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
-  journal       = {Math. Nachr.},
-  fjournal      = {Mathematische Nachrichten},
-  volume        = {119},
-  year          = {1984},
-  pages         = {41--53},
-  issn          = {0025-584X,1522-2616},
-  mrclass       = {47B37 (44A15 46B20 60G46)},
-  mrnumber      = {774175},
-  mrreviewer    = {D.\ L.\ Burkholder},
-  doi           = {10.1002/mana.19841190104},
-  url           = {https://doi.org/10.1002/mana.19841190104}
-}
-@inproceedings{bourgain:84:on*1,
-  author        = {Bourgain, J.},
-  title         = {On nonisomorphisms of algebras of analytic functions},
-  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
-  series        = {Teubner-Texte Math.},
-  volume        = {67},
-  pages         = {145--154},
-  publisher     = {Teubner, Leipzig},
-  year          = {1984},
-  mrclass       = {46J15 (32E25)},
-  mrnumber      = {763536}
-}
-@article{bourgain:84:on*2,
-  author        = {Bourgain, J.},
   title         = {On bases in the disc algebra},
   journal       = {Trans. Amer. Math. Soc.},
   fjournal      = {Transactions of the American Mathematical Society},
@@ -14098,6 +14071,33 @@
   mrreviewer    = {Jacques\ Mayer},
   doi           = {10.2307/1999476},
   url           = {https://doi.org/10.2307/1999476}
+}
+@article{bourgain:84:on*1,
+  author        = {Bourgain, J.},
+  title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
+  journal       = {Math. Nachr.},
+  fjournal      = {Mathematische Nachrichten},
+  volume        = {119},
+  year          = {1984},
+  pages         = {41--53},
+  issn          = {0025-584X,1522-2616},
+  mrclass       = {47B37 (44A15 46B20 60G46)},
+  mrnumber      = {774175},
+  mrreviewer    = {D.\ L.\ Burkholder},
+  doi           = {10.1002/mana.19841190104},
+  url           = {https://doi.org/10.1002/mana.19841190104}
+}
+@inproceedings{bourgain:84:on*2,
+  author        = {Bourgain, J.},
+  title         = {On nonisomorphisms of algebras of analytic functions},
+  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
+  series        = {Teubner-Texte Math.},
+  volume        = {67},
+  pages         = {145--154},
+  publisher     = {Teubner, Leipzig},
+  year          = {1984},
+  mrclass       = {46J15 (32E25)},
+  mrnumber      = {763536}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14125,6 +14125,18 @@
   mrreviewer    = {Colin\ C.\ Graham}
 }
 @incollection{bourgain:84:sur,
+  author        = {Bourgain, Jean},
+  title         = {Sur le minimum de certaines sommes de cosinus},
+  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
+  series        = {Publ. Math. Orsay},
+  volume        = {84-1},
+  pages         = {Exp. No. 2, 7},
+  publisher     = {Univ. Paris XI, Orsay},
+  year          = {1984},
+  mrclass       = {11L03 (42A32)},
+  mrnumber      = {740713}
+}
+@incollection{bourgain:84:sur*1,
   author        = {Bourgain, J.},
   title         = {Sur l'approximation dans {$H^infty$}},
   booktitle     = {Seminar on the geometry of {B}anach spaces, {V}ol. {I}, {II} ({P}aris, 1983)},
@@ -14136,18 +14148,6 @@
   mrclass       = {30E10 (41A35 46J15)},
   mrnumber      = {781582},
   mrreviewer    = {Burglind\ J\"{o}ricke}
-}
-@incollection{bourgain:84:sur*1,
-  author        = {Bourgain, Jean},
-  title         = {Sur le minimum de certaines sommes de cosinus},
-  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
-  series        = {Publ. Math. Orsay},
-  volume        = {84-1},
-  pages         = {Exp. No. 2, 7},
-  publisher     = {Univ. Paris XI, Orsay},
-  year          = {1984},
-  mrclass       = {11L03 (42A32)},
-  mrnumber      = {740713}
 }
 @incollection{bourgain:84:vector,
   author        = {Bourgain, J.},
@@ -14212,19 +14212,18 @@
   mrnumber      = {832256}
 }
 @article{bourgain:85:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On finitely generated closed ideals in {$H^infty(D)$}},
-  journal       = {Ann. Inst. Fourier (Grenoble)},
-  fjournal      = {Universit\'{e} de Grenoble. Annales de l'Institut Fourier},
-  volume        = {35},
+  author        = {Bourgain, J.},
+  title         = {On square functions on the trigonometric system},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {37},
   year          = {1985},
-  number        = {4},
-  pages         = {163--174},
-  issn          = {0373-0956,1777-5310},
-  mrclass       = {46J15 (30H05 46J20)},
-  mrnumber      = {812323},
-  mrreviewer    = {Richard\ Rochberg},
-  url           = {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
+  number        = {1},
+  pages         = {20--26},
+  issn          = {0037-9476},
+  mrclass       = {42A50 (42A45)},
+  mrnumber      = {847119},
+  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
 }
 @article{bourgain:85:on*2,
   author        = {Bourgain, J.},
@@ -14243,18 +14242,19 @@
   url           = {https://doi.org/10.1007/BF02776078}
 }
 @article{bourgain:85:on*3,
-  author        = {Bourgain, J.},
-  title         = {On square functions on the trigonometric system},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {37},
+  author        = {Bourgain, Jean},
+  title         = {On finitely generated closed ideals in {$H^infty(D)$}},
+  journal       = {Ann. Inst. Fourier (Grenoble)},
+  fjournal      = {Universit\'{e} de Grenoble. Annales de l'Institut Fourier},
+  volume        = {35},
   year          = {1985},
-  number        = {1},
-  pages         = {20--26},
-  issn          = {0037-9476},
-  mrclass       = {42A50 (42A45)},
-  mrnumber      = {847119},
-  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
+  number        = {4},
+  pages         = {163--174},
+  issn          = {0373-0956,1777-5310},
+  mrclass       = {46J15 (30H05 46J20)},
+  mrnumber      = {812323},
+  mrreviewer    = {Richard\ Rochberg},
+  url           = {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
 }
 @article{bourgain:85:sidon,
   author        = {Bourgain, Jean},
@@ -14545,7 +14545,23 @@
   mrnumber      = {934289},
   mrreviewer    = {Alberto\ Torchinsky}
 }
-@article{bourgain:87:on,
+@incollection{bourgain:87:on,
+  author        = {Bourgain, J.},
+  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
+  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1267},
+  pages         = {168--176},
+  publisher     = {Springer, Berlin},
+  year          = {1987},
+  isbn          = {3-540-18103-2},
+  mrclass       = {42B25 (42B15)},
+  mrnumber      = {907693},
+  mrreviewer    = {Roger\ L.\ Jones},
+  doi           = {10.1007/BFb0078144},
+  url           = {https://doi.org/10.1007/BFb0078144}
+}
+@article{bourgain:87:on*1,
   author        = {Bourgain, J.},
   title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
   journal       = {Invent. Math.},
@@ -14561,7 +14577,7 @@
   doi           = {10.1007/BF01389238},
   url           = {https://doi.org/10.1007/BF01389238}
 }
-@incollection{bourgain:87:on*1,
+@incollection{bourgain:87:on*2,
   author        = {Bourgain, J.},
   title         = {On lattice packing of convex symmetric sets in {${\bf R}^n$}},
   booktitle     = {Geometrical aspects of functional analysis (1985/86)},
@@ -14576,22 +14592,6 @@
   mrreviewer    = {J.\ M.\ Wills},
   doi           = {10.1007/BFb0078132},
   url           = {https://doi.org/10.1007/BFb0078132}
-}
-@incollection{bourgain:87:on*2,
-  author        = {Bourgain, J.},
-  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
-  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1267},
-  pages         = {168--176},
-  publisher     = {Springer, Berlin},
-  year          = {1987},
-  isbn          = {3-540-18103-2},
-  mrclass       = {42B25 (42B15)},
-  mrnumber      = {907693},
-  mrreviewer    = {Roger\ L.\ Jones},
-  doi           = {10.1007/BFb0078144},
-  url           = {https://doi.org/10.1007/BFb0078144}
 }
 @article{bourgain:87:on*3,
   author        = {Bourgain, Jean},
@@ -14706,22 +14706,6 @@
 }
 @article{bourgain:88:on,
   author        = {Bourgain, J.},
-  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {73--84},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937582},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776302},
-  url           = {https://doi.org/10.1007/BF02776302}
-}
-@article{bourgain:88:on*1,
-  author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14736,7 +14720,7 @@
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
 }
-@incollection{bourgain:88:on*2,
+@incollection{bourgain:88:on*1,
   author        = {Bourgain, J.},
   title         = {On finite-dimensional homogeneous {B}anach spaces},
   booktitle     = {Geometric aspects of functional analysis (1986/87)},
@@ -14751,6 +14735,22 @@
   mrreviewer    = {T.\ Figiel},
   doi           = {10.1007/BFb0081744},
   url           = {https://doi.org/10.1007/BFb0081744}
+}
+@article{bourgain:88:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {73--84},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937582},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776302},
+  url           = {https://doi.org/10.1007/BF02776302}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -15033,23 +15033,7 @@
   doi           = {10.1007/BFb0089219},
   url           = {https://doi.org/10.1007/BFb0089219}
 }
-@incollection{bourgain:91:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
-  booktitle     = {Geometric aspects of functional analysis (1989--90)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1469},
-  pages         = {179--191},
-  publisher     = {Springer, Berlin},
-  year          = {1991},
-  isbn          = {3-540-54024-5},
-  mrclass       = {42B15 (42B25 46E30)},
-  mrnumber      = {1122623},
-  mrreviewer    = {Peter\ I.\ Lizorkin},
-  doi           = {10.1007/BFb0089225},
-  url           = {https://doi.org/10.1007/BFb0089225}
-}
-@article{bourgain:91:on*2,
+@article{bourgain:91:on*1,
   author        = {Bourgain, J.},
   title         = {On the {B}usemann-{P}etty problem for perturbations of the ball},
   journal       = {Geom. Funct. Anal.},
@@ -15064,6 +15048,22 @@
   mrreviewer    = {W.\ J.\ Firey},
   doi           = {10.1007/BF01895416},
   url           = {https://doi.org/10.1007/BF01895416}
+}
+@incollection{bourgain:91:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
+  booktitle     = {Geometric aspects of functional analysis (1989--90)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1469},
+  pages         = {179--191},
+  publisher     = {Springer, Berlin},
+  year          = {1991},
+  isbn          = {3-540-54024-5},
+  mrclass       = {42B15 (42B25 46E30)},
+  mrnumber      = {1122623},
+  mrreviewer    = {Peter\ I.\ Lizorkin},
+  doi           = {10.1007/BFb0089225},
+  url           = {https://doi.org/10.1007/BFb0089225}
 }
 @incollection{bourgain:91:remarks,
   author        = {Bourgain, J.},
@@ -21158,7 +21158,20 @@
   doi           = {10.1016/S0167-7152(99)00163-7},
   url           = {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
-@article{chen:00:on,
+@incollection{chen:00:on,
+  author        = {Chen, Xia},
+  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
+  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
+  series        = {Progr. Probab.},
+  volume        = {47},
+  pages         = {249--259},
+  publisher     = {Birkh\"{a}user Boston, Boston, MA},
+  year          = {2000},
+  mrclass       = {60F15 (60J55)},
+  mrnumber      = {1857326},
+  mrreviewer    = {Ingemar Kaj}
+}
+@article{chen:00:on*1,
   author        = {Chen, Xia},
   title         = {On the limit laws of the second order for additive functionals of {H}arris recurrent {M}arkov chains},
   journal       = {Probab. Theory Related Fields},
@@ -21172,19 +21185,6 @@
   mrnumber      = {1736591},
   doi           = {10.1007/PL00008724},
   url           = {https://doi.org/10.1007/PL00008724}
-}
-@incollection{chen:00:on*1,
-  author        = {Chen, Xia},
-  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
-  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
-  series        = {Progr. Probab.},
-  volume        = {47},
-  pages         = {249--259},
-  publisher     = {Birkh\"{a}user Boston, Boston, MA},
-  year          = {2000},
-  mrclass       = {60F15 (60J55)},
-  mrnumber      = {1857326},
-  mrreviewer    = {Ingemar Kaj}
 }
 @article{chen:01:exact,
   author        = {Chen, Xia},
@@ -25670,21 +25670,6 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25698,6 +25683,21 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -28432,18 +28432,6 @@
 }
 @book{dunford.schwartz:88:linear,
   author        = {Dunford, Nelson and Schwartz, Jacob T.},
-  title         = {Linear operators. {P}art {II}},
-  series        = {Wiley Classics Library},
-  note          = {Spectral theory. Selfadjoint operators in Hilbert space, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1963 original, A Wiley-Interscience Publication},
-  publisher     = {John Wiley \& Sons, Inc., New York},
-  year          = {1988},
-  pages         = {i--x, 859--1923 and 1--7},
-  isbn          = {0-471-60847-5},
-  mrclass       = {47-01 (46-01)},
-  mrnumber      = {1009163}
-}
-@book{dunford.schwartz:88:linear*1,
-  author        = {Dunford, Nelson and Schwartz, Jacob T.},
   title         = {Linear operators. {P}art {I}},
   series        = {Wiley Classics Library},
   note          = {General theory, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1958 original, A Wiley-Interscience Publication},
@@ -28453,6 +28441,18 @@
   isbn          = {0-471-60848-3},
   mrclass       = {47-01 (46-01)},
   mrnumber      = {1009162}
+}
+@book{dunford.schwartz:88:linear*1,
+  author        = {Dunford, Nelson and Schwartz, Jacob T.},
+  title         = {Linear operators. {P}art {II}},
+  series        = {Wiley Classics Library},
+  note          = {Spectral theory. Selfadjoint operators in Hilbert space, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1963 original, A Wiley-Interscience Publication},
+  publisher     = {John Wiley \& Sons, Inc., New York},
+  year          = {1988},
+  pages         = {i--x, 859--1923 and 1--7},
+  isbn          = {0-471-60847-5},
+  mrclass       = {47-01 (46-01)},
+  mrnumber      = {1009163}
 }
 @article{dunlap.gu.ea:20:fluctuations,
   author        = {Dunlap, Alexander and Gu, Yu and Ryzhik, Lenya and Zeitouni, Ofer},
@@ -40471,6 +40471,22 @@
   mrclass       = {60H10 (58G32 60J60)},
   mrnumber      = {1011252}
 }
+@article{ikhlef.cardy:09:discretely,
+  author        = {Ikhlef, Yacine and Cardy, John},
+  title         = {Discretely holomorphic parafermions and integrable loop models},
+  journal       = {J. Phys. A},
+  fjournal      = {Journal of Physics. A. Mathematical and Theoretical},
+  volume        = {42},
+  year          = {2009},
+  number        = {10},
+  pages         = {102001, 11},
+  issn          = {1751-8113},
+  mrclass       = {82B20 (81R12 81T40 82B23)},
+  mrnumber      = {2485852},
+  mrreviewer    = {Nenad Manojlovi\'{c}},
+  doi           = {10.1088/1751-8113/42/10/102001},
+  url           = {https://doi.org/10.1088/1751-8113/42/10/102001}
+}
 @article{imamura.sasamoto:04:fluctuations,
   author        = {Imamura, T. and Sasamoto, T.},
   title         = {Fluctuations of the one-dimensional polynuclear growth model with external sources},
@@ -41308,6 +41324,22 @@
   mrclass       = {35.45},
   mrnumber      = {170088},
   mrreviewer    = {Richard Beals}
+}
+@article{kager.nienhuis:04:guide,
+  author        = {Kager, Wouter and Nienhuis, Bernard},
+  title         = {A guide to stochastic {L}\"{o}wner evolution and its applications},
+  journal       = {J. Statist. Phys.},
+  fjournal      = {Journal of Statistical Physics},
+  volume        = {115},
+  year          = {2004},
+  number        = {5-6},
+  pages         = {1149--1229},
+  issn          = {0022-4715},
+  mrclass       = {82B27 (30C55 60H10 60J65 60K35 81T40)},
+  mrnumber      = {2065722},
+  mrreviewer    = {Ren\'{e} L. Schilling},
+  doi           = {10.1023/B:JOSS.0000028058.87266.be},
+  url           = {https://doi.org/10.1023/B:JOSS.0000028058.87266.be}
 }
 @article{kahane.peyriere:76:sur,
   author        = {Kahane, J.-P. and Peyri\`ere, J.},
@@ -45065,6 +45097,22 @@
   mrreviewer    = {Bruce C. Berndt},
   doi           = {10.1007/978-1-4757-3980-0},
   url           = {https://doi.org/10.1007/978-1-4757-3980-0}
+}
+@article{lawler.schramm.ea:04:conformal,
+  author        = {Lawler, Gregory F. and Schramm, Oded and Werner, Wendelin},
+  title         = {Conformal invariance of planar loop-erased random walks and uniform spanning trees},
+  journal       = {Ann. Probab.},
+  fjournal      = {The Annals of Probability},
+  volume        = {32},
+  year          = {2004},
+  number        = {1B},
+  pages         = {939--995},
+  issn          = {0091-1798},
+  mrclass       = {82B41 (60G50)},
+  mrnumber      = {2044671},
+  mrreviewer    = {Olivier Raimond},
+  doi           = {10.1214/aop/1079021469},
+  url           = {https://doi.org/10.1214/aop/1079021469}
 }
 @incollection{lawler.schramm.ea:04:on,
   author        = {Lawler, Gregory F. and Schramm, Oded and Werner, Wendelin},
@@ -52097,6 +52145,22 @@
   mrnumber      = {675241},
   doi           = {10.1103/PhysRevLett.49.1062},
   url           = {https://doi.org/10.1103/PhysRevLett.49.1062}
+}
+@article{nienhuis:84:critical,
+  author        = {Nienhuis, Bernard},
+  title         = {Critical behavior of two-dimensional spin models and charge asymmetry in the {C}oulomb gas},
+  journal       = {J. Statist. Phys.},
+  fjournal      = {Journal of Statistical Physics},
+  volume        = {34},
+  year          = {1984},
+  number        = {5-6},
+  pages         = {731--761},
+  issn          = {0022-4715},
+  mrclass       = {82A68 (82A05 82A25)},
+  mrnumber      = {751711},
+  mrreviewer    = {Vladimir Privman},
+  doi           = {10.1007/BF01009437},
+  url           = {https://doi.org/10.1007/BF01009437}
 }
 @incollection{nienhuis:87:coulomb,
   author        = {Nienhuis, Bernard},
@@ -62819,6 +62883,21 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -62832,21 +62911,6 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
@@ -62866,6 +62930,20 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -62879,20 +62957,6 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
@@ -68524,6 +68588,21 @@
   url           = {https://doi.org/10.1016/j.jde.2008.02.019}
 }
 @article{zhang:09:variational,
+  author        = {Zhang, Xicheng},
+  title         = {A variational representation for random functionals on abstract {W}iener spaces},
+  journal       = {J. Math. Kyoto Univ.},
+  fjournal      = {Journal of Mathematics of Kyoto University},
+  volume        = {49},
+  year          = {2009},
+  number        = {3},
+  pages         = {475--490},
+  issn          = {0023-608X},
+  mrclass       = {60H07 (60F10)},
+  mrnumber      = {2583599},
+  doi           = {10.1215/kjm/1260975036},
+  url           = {https://doi.org/10.1215/kjm/1260975036}
+}
+@article{zhang:09:variational*1,
   author        = {Zhang, Tusheng},
   title         = {Variational inequalities and optimization for {M}arkov processes associated with semi-{D}irichlet forms},
   journal       = {SIAM J. Control Optim.},
@@ -68538,21 +68617,6 @@
   mrreviewer    = {Arie Leizarowitz},
   doi           = {10.1137/080737630},
   url           = {https://doi.org/10.1137/080737630}
-}
-@article{zhang:09:variational*1,
-  author        = {Zhang, Xicheng},
-  title         = {A variational representation for random functionals on abstract {W}iener spaces},
-  journal       = {J. Math. Kyoto Univ.},
-  fjournal      = {Journal of Mathematics of Kyoto University},
-  volume        = {49},
-  year          = {2009},
-  number        = {3},
-  pages         = {475--490},
-  issn          = {0023-608X},
-  mrclass       = {60H07 (60F10)},
-  mrnumber      = {2583599},
-  doi           = {10.1215/kjm/1260975036},
-  url           = {https://doi.org/10.1215/kjm/1260975036}
 }
 @article{zhang:10:stochastic,
   author        = {Zhang, Xicheng},
